--- a/res/layout/activity_category.xml
+++ b/res/layout/activity_category.xml
@@ -11,6 +11,8 @@
     <ListView 
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+          android:stackFromBottom="true"
+  android:transcriptMode="alwaysScroll"/>
 
 </RelativeLayout>
