--- a/res/layout/list_category.xml
+++ b/res/layout/list_category.xml
@@ -13,7 +13,7 @@
     <TextView 
         android:id="@+id/name"
         android:layout_width="@dimen/width_listText"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/height_listImg"
         android:gravity="center"
         android:textSize="@dimen/textsize_listText"/>
 
