--- a/res/layout/activity_category.xml
+++ b/res/layout/activity_category.xml
@@ -2,17 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <ListView 
+    <com.hy.tools.StopScrollAddList 
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-          android:stackFromBottom="true"
-  android:transcriptMode="alwaysScroll"/>
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
