--- a/res/layout/activity_shoeslist.xml
+++ b/res/layout/activity_shoeslist.xml
@@ -1,18 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    <GridView 
-        android:id="@+id/grid_shoes" 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:verticalSpacing="2dp"
-        android:horizontalSpacing="1dp"
-        android:columnWidth="160dp"
-        android:stretchMode="columnWidth"
-        android:gravity="center"
-        android:cacheColorHint="#00000000"/>
 
+    <com.baoyz.widget.PullRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <GridView
+            android:id="@+id/grid_shoes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:cacheColorHint="#00000000"
+            android:columnWidth="160dp"
+            android:gravity="center"
+            android:horizontalSpacing="1dp"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="2dp" />
+    </com.baoyz.widget.PullRefreshLayout>
+    
+    <LinearLayout
+    android:id="@+id/loadmore"  
+    android:layout_width="match_parent"  
+    android:layout_height="wrap_content"  
+    android:gravity="center"  
+    android:paddingBottom="15dip"  
+    android:paddingTop="10dip"
+    android:layout_alignParentBottom="true" 
+    android:visibility="invisible"
+    android:background="#EBEBEB">  
+  
+    <ProgressBar  
+        android:id="@+id/loadmore_progress"  
+        style="?android:attr/progressBarStyle"  
+        android:layout_width="wrap_content"  
+        android:layout_height="wrap_content"    
+        android:indeterminate="true"
+         />  
+  
+   <TextView  
+        android:id="@+id/loadmore_text"  
+        android:layout_width="wrap_content"  
+        android:layout_height="wrap_content"  
+        android:layout_gravity="center"  
+        android:gravity="center"  
+        android:text="@string/loadmore_label"  
+        android:textAppearance="?android:attr/textAppearanceMedium"  
+        android:textStyle="bold" />  
+  
 </LinearLayout>
+
+</RelativeLayout>
