--- a/res/layout/list_arrow.xml
+++ b/res/layout/list_arrow.xml
@@ -29,6 +29,7 @@
         android:layout_height="@dimen/height_listArrow"
         android:scaleType="fitCenter" 
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:src="@drawable/arrow"/>
 
 </RelativeLayout>
